# solvia

./: .dockerignore  .env  .env.example  .gitconfig  .gitignore  Dockerfile  README.md  advanced_anti_analysis.py  agent_deployment_collector.py  ai_security_model.py  analyze_vulnerabilities.py  architecture.md  cisa_collector.py  collect_all_data.py  cve_collector.py  data_size_monitor.py  deploy-bridge.js  deploy-robust.sh  deploy-systemd.sh  deploy.sh  exploit_db_collector.py  exploit_generation_model.py  exploit_templates.csv  github_advisory_collector.py  gpt_exploit_generation.py  hardhat.config.js  hardhat.config.ts  install.sh  integrate_datasets.py  kernel_memory_protection.py  metadata.json  metasploit_collector.py  mitre_collector.py  network_pattern_collector.py  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.md  requirements.txt  (+13 more)
app/: blockchain.py  config.py  main.py  models.py  requirements.txt  routes.py  storage.py  test_integration.py  train_model.py  webrtc.py
frontend/: .env  .env.development  .env.production  Dockerfile  index.html  jest.config.cjs  jest.config.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
solvia/: pyproject.toml
solvia/app/: main.py
solvia/web_panel/frontend/: .env.production  package-lock.json  package.json
solvia/web_panel/frontend/src/: App.css  App.tsx  index.css
solvia/web_panel/frontend/src/components/: SecurityPanel.tsx
src/: App.tsx  (+4 more)
(+242 files in other folders)
