[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
websockets = ">=10.0.0,<14.0.0"
aiortc = "^1.9.0"
python-dotenv = "^1.0.1"
solana = "^0.36.1"
httpx = "0.24.1"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
