[tool.poetry]
name = "solvia"
version = "0.1.0"
description = "Security Analysis and Exploit Generation System"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.24.0"
transformers = "^4.47.1"
torch = "^2.5.1"
pandas = "^2.2.3"
numpy = "^2.2.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
